lib/template_parser.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function(b) { return expression(Token.Context, b); },
        peg$c1 = function(first, s) { return s; },
        peg$c2 = function(first, rest) {
            return expression(Token.Body, flatten([first].concat(rest)));
        },
        peg$c3 = function(b) {
            return expression(Token.Body, flatten(b));
        },
        peg$c4 = { type: "any", description: "any character" },
        peg$c5 = function(a) { return a },
        peg$c6 = function(a) { return expression(Token.Raw, a.join('')); },
        peg$c7 = "{#",
        peg$c8 = { type: "literal", value: "{#", description: "\"{#\"" },
        peg$c9 = "#}",
        peg$c10 = { type: "literal", value: "#}", description: "\"#}\"" },
        peg$c11 = function(a) { return a; },
        peg$c12 = function(c) { return expression(Token.Comment, c.join('')); },
        peg$c13 = function(t) { return t },
        peg$c14 = "=",
        peg$c15 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c16 = function(a, v) { 
          return expression(Token.Assignment, v, a); 
        },
        peg$c17 = "s",
        peg$c18 = { type: "literal", value: "s", description: "\"s\"" },
        peg$c19 = "i",
        peg$c20 = { type: "literal", value: "i", description: "\"i\"" },
        peg$c21 = "f",
        peg$c22 = { type: "literal", value: "f", description: "\"f\"" },
        peg$c23 = "!",
        peg$c24 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c25 = "if",
        peg$c26 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c27 = function(i, ib, t) { return t; },
        peg$c28 = "end",
        peg$c29 = { type: "literal", value: "end", description: "\"end\"" },
        peg$c30 = function(i, ib, ei, el) {
                return expression(Token.Conditional, i, ib, ei, el);
            },
        peg$c31 = "elif",
        peg$c32 = { type: "literal", value: "elif", description: "\"elif\"" },
        peg$c33 = function(e, b) { return expression(Token.Block, null, e, b); },
        peg$c34 = "else",
        peg$c35 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c36 = function(b) { return b; },
        peg$c37 = "for",
        peg$c38 = { type: "literal", value: "for", description: "\"for\"" },
        peg$c39 = "in",
        peg$c40 = { type: "literal", value: "in", description: "\"in\"" },
        peg$c41 = function(v, fexp, b) {
            //return [v, fexp, b];
            return expression(Token.Loop, null, v, fexp, b);
          },
        peg$c42 = ",",
        peg$c43 = { type: "literal", value: ",", description: "\",\"" },
        peg$c44 = function(i, v, fexp, b) {
            //return [i, v, fexp, b];
            return expression(Token.Loop, i, v, fexp, b);
          },
        peg$c45 = function(e) { return e; },
        peg$c46 = "?",
        peg$c47 = { type: "literal", value: "?", description: "\"?\"" },
        peg$c48 = ":",
        peg$c49 = { type: "literal", value: ":", description: "\":\"" },
        peg$c50 = function(a, b, c) { return expression(Token.Tenary, a, b, c);   },
        peg$c51 = function(a, o, b) { return expression(Token.Operation, a, o, b); },
        peg$c52 = "==",
        peg$c53 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c54 = "!=",
        peg$c55 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c56 = ">=",
        peg$c57 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c58 = "<=",
        peg$c59 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c60 = ">",
        peg$c61 = { type: "literal", value: ">", description: "\">\"" },
        peg$c62 = "<",
        peg$c63 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c64 = function(o) {
          switch (o) {
            case "==": return Operator.Eq;
            case "!=": return Operator.Neq;
            case ">=": return Operator.Gte;
            case ">": return Operator.Gt;
            case "<=": return Operator.Lte;
            case "<": return Operator.Lt;
          }
        },
        peg$c65 = function(b) { return expression(Token.Literal, LiteralType.Boolean, b); },
        peg$c66 = "true",
        peg$c67 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c68 = function() { return true; },
        peg$c69 = "false",
        peg$c70 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c71 = function() { return false; },
        peg$c72 = function(n) { return expression(Token.Literal, LiteralType.Number, n)},
        peg$c73 = { type: "other", description: "number" },
        peg$c74 = function() { return parseFloat(text()); },
        peg$c75 = ".",
        peg$c76 = { type: "literal", value: ".", description: "\".\"" },
        peg$c77 = /^[1-9]/,
        peg$c78 = { type: "class", value: "[1-9]", description: "[1-9]" },
        peg$c79 = /^[eE]/,
        peg$c80 = { type: "class", value: "[eE]", description: "[eE]" },
        peg$c81 = "-",
        peg$c82 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c83 = "+",
        peg$c84 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c85 = "0",
        peg$c86 = { type: "literal", value: "0", description: "\"0\"" },
        peg$c87 = function(s) { return expression(Token.Literal, LiteralType.String, s)},
        peg$c88 = { type: "other", description: "string" },
        peg$c89 = function(chars) { return chars.join(""); },
        peg$c90 = "\"",
        peg$c91 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c92 = "\\",
        peg$c93 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c94 = "/",
        peg$c95 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c96 = "b",
        peg$c97 = { type: "literal", value: "b", description: "\"b\"" },
        peg$c98 = function() { return "\b"; },
        peg$c99 = function() { return "\f"; },
        peg$c100 = "n",
        peg$c101 = { type: "literal", value: "n", description: "\"n\"" },
        peg$c102 = function() { return "\n"; },
        peg$c103 = "r",
        peg$c104 = { type: "literal", value: "r", description: "\"r\"" },
        peg$c105 = function() { return "\r"; },
        peg$c106 = "t",
        peg$c107 = { type: "literal", value: "t", description: "\"t\"" },
        peg$c108 = function() { return "\t"; },
        peg$c109 = "u",
        peg$c110 = { type: "literal", value: "u", description: "\"u\"" },
        peg$c111 = function(digits) {
                  return String.fromCharCode(parseInt(digits, 16));
                },
        peg$c112 = function(sequence) { return sequence; },
        peg$c113 = /^[^\0-\x1F"\\]/,
        peg$c114 = { type: "class", value: "[^\\0-\\x1F\\x22\\x5C]", description: "[^\\0-\\x1F\\x22\\x5C]" },
        peg$c115 = function(r) { return r; },
        peg$c116 = "(",
        peg$c117 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c118 = ")",
        peg$c119 = { type: "literal", value: ")", description: "\")\"" },
        peg$c120 = function(any) { return any; },
        peg$c121 = function(left, op, right) { return expression(Token.Arithmetic, left, op, right); },
        peg$c122 = "*",
        peg$c123 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c124 = "^",
        peg$c125 = { type: "literal", value: "^", description: "\"^\"" },
        peg$c126 = "%",
        peg$c127 = { type: "literal", value: "%", description: "\"%\"" },
        peg$c128 = function(a) {
              switch (a) {
                case "+": return MathOperator.Add;
                case "*": return MathOperator.Mul;
                case "-": return MathOperator.Sub;
                case "/": return MathOperator.Div;
                case "^": return MathOperator.Pow;
                case "%": return MathOperator.Mod;
              }
            },
        peg$c129 = "context",
        peg$c130 = { type: "literal", value: "context", description: "\"context\"" },
        peg$c131 = "{",
        peg$c132 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c133 = "}",
        peg$c134 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c135 = function(n, p) { return },
        peg$c136 = function(p) { return p; },
        peg$c137 = function(p, rest) { return [p].concat(rest); },
        peg$c138 = function(n, p) {
            return expression(Token.Property, n, p);
        },
        peg$c139 = function(v, p) { return expression(Token.FunctionCall, v, p)},
        peg$c140 = function(first, v) { return v; },
        peg$c141 = function(first, rest) { return [first].concat(rest) },
        peg$c142 = "template",
        peg$c143 = { type: "literal", value: "template", description: "\"template\"" },
        peg$c144 = function(v, p, b) {
                return expression(Token.Template, v, p, b);
            },
        peg$c145 = function(first, t) { return t; },
        peg$c146 = function(first, rest) { return [first].concat(rest); },
        peg$c147 = function(n, t) {
                return expression(Token.Parameter, n, t);
            },
        peg$c148 = function(t) { return t; },
        peg$c149 = "type",
        peg$c150 = { type: "literal", value: "type", description: "\"type\"" },
        peg$c151 = function(n, p) {
            return expression(Token.CustomType, n, p);
        },
        peg$c152 = function(s) { return s; },
        peg$c153 = "[]",
        peg$c154 = { type: "literal", value: "[]", description: "\"[]\"" },
        peg$c155 = function(t) { return expression(Token.Array, t); },
        peg$c156 = function(v) { return expression(Token.UserType, v); },
        peg$c157 = function(p) { return expression(Token.Primitive, p); },
        peg$c158 = "int",
        peg$c159 = { type: "literal", value: "int", description: "\"int\"" },
        peg$c160 = function() { return Primitive.Int; },
        peg$c161 = "float",
        peg$c162 = { type: "literal", value: "float", description: "\"float\"" },
        peg$c163 = function() { return Primitive.Float; },
        peg$c164 = "boolean",
        peg$c165 = { type: "literal", value: "boolean", description: "\"boolean\"" },
        peg$c166 = function() { return Primitive.Boolean; },
        peg$c167 = "string",
        peg$c168 = { type: "literal", value: "string", description: "\"string\"" },
        peg$c169 = function() { return Primitive.String; },
        peg$c170 = "date",
        peg$c171 = { type: "literal", value: "date", description: "\"date\"" },
        peg$c172 = function() { return Primitive.Date; },
        peg$c173 = function(v) { return expression(Token.Variable, v); },
        peg$c174 = /^[a-zA-Z_]/,
        peg$c175 = { type: "class", value: "[a-zA-Z_]", description: "[a-zA-Z_]" },
        peg$c176 = function(a) { return a.join(''); },
        peg$c177 = function(a, b) { return b.join('')},
        peg$c178 = function(a, b) { return expression(Token.Accessor, [a.join('')].concat(b)); },
        peg$c179 = "{%",
        peg$c180 = { type: "literal", value: "{%", description: "\"{%\"" },
        peg$c181 = "%}",
        peg$c182 = { type: "literal", value: "%}", description: "\"%}\"" },
        peg$c183 = /^[0-9]/,
        peg$c184 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c185 = /^[0-9a-f]/i,
        peg$c186 = { type: "class", value: "[0-9a-f]i", description: "[0-9a-f]i" },
        peg$c187 = /^[ \t\n\r]/,
        peg$c188 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsestart_body();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse__();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestart_body() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parsestart_body_type();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parse__();
        if (s4 !== peg$FAILED) {
          s5 = peg$parsestart_body_type();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c1(s1, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parse__();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsestart_body_type();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s3;
              s4 = peg$c1(s1, s5);
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestart_body_type() {
      var s0;

      s0 = peg$parseCustomType();
      if (s0 === peg$FAILED) {
        s0 = peg$parseTemplate();
        if (s0 === peg$FAILED) {
          s0 = peg$parseComment();
        }
      }

      return s0;
    }

    function peg$parsebody() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseTag();
      if (s2 === peg$FAILED) {
        s2 = peg$parseComment();
        if (s2 === peg$FAILED) {
          s2 = peg$parsecontent();
        }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parseTag();
          if (s2 === peg$FAILED) {
            s2 = peg$parseComment();
            if (s2 === peg$FAILED) {
              s2 = peg$parsecontent();
            }
          }
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsecontent() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$currPos;
      peg$silentFails++;
      s4 = peg$parseOpen();
      if (s4 === peg$FAILED) {
        s4 = peg$parseClose();
        if (s4 === peg$FAILED) {
          s4 = peg$parseComment();
        }
      }
      peg$silentFails--;
      if (s4 === peg$FAILED) {
        s3 = void 0;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        if (input.length > peg$currPos) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s4 !== peg$FAILED) {
          peg$savedPos = s2;
          s3 = peg$c5(s4);
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$currPos;
          s3 = peg$currPos;
          peg$silentFails++;
          s4 = peg$parseOpen();
          if (s4 === peg$FAILED) {
            s4 = peg$parseClose();
            if (s4 === peg$FAILED) {
              s4 = peg$parseComment();
            }
          }
          peg$silentFails--;
          if (s4 === peg$FAILED) {
            s3 = void 0;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            if (input.length > peg$currPos) {
              s4 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c4); }
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s2;
              s3 = peg$c5(s4);
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c6(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseComment() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c7) {
        s1 = peg$c7;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$currPos;
        peg$silentFails++;
        if (input.substr(peg$currPos, 2) === peg$c9) {
          s5 = peg$c9;
          peg$currPos += 2;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        peg$silentFails--;
        if (s5 === peg$FAILED) {
          s4 = void 0;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c4); }
          }
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c11(s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$currPos;
            s4 = peg$currPos;
            peg$silentFails++;
            if (input.substr(peg$currPos, 2) === peg$c9) {
              s5 = peg$c9;
              peg$currPos += 2;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c10); }
            }
            peg$silentFails--;
            if (s5 === peg$FAILED) {
              s4 = void 0;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
            if (s4 !== peg$FAILED) {
              if (input.length > peg$currPos) {
                s5 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c4); }
              }
              if (s5 !== peg$FAILED) {
                peg$savedPos = s3;
                s4 = peg$c11(s5);
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c9) {
            s3 = peg$c9;
            peg$currPos += 2;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c10); }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c12(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseTag() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parsetag_control_statements();
      if (s1 === peg$FAILED) {
        s1 = peg$parsetag_assignment();
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c13(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsetag_assignment() {
      var s0, s1, s2, s3, s4, s5, s6, s7;
